--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -218,6 +218,12 @@ a:hover{ color: #A00000; }
                  margin-left: 5px;
                  text-align: right;
                  text-decoration: none; }
+h1.bookitem{ font-size: 16px; }
+h2.bookitem{ font-size: 12px; }
+h3.bookitem{ font-size: 10px; }
+h4.bookitem{ font-size:  9px; }
+h5.bookitem{ font-size:  8px; }
+h6.bookitem{ font-size:  7px; }
 .bookitemlink,
 .bookitemlink:link,
 .bookitemlink:active,
